--- a/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
@@ -126,20 +126,8 @@
 #optionsItems {
     margin-top: 20px;
 }
-#InfoValue1 {
-    gap: 10px;
-    display: flex;
-    border-left: 2px solid #808080;
-    border-right: 2px solid #808080;
-    padding-right: 10px;
-    overflow-x: hidden;
-}
-.horizontal1 {
-    border-top: 1px solid black;
-    display: block;
-    gap: 20px;
-    margin-left: 10px;
-}
+
+
 #selectLang{
     border:none;
     outline:none;
@@ -2623,11 +2611,11 @@
     }
 
     #InfoValue1 {
+        align-items: start;
         gap: 10px;
         display: flex;
-        border-left: 2px solid grey;
-        border-right: 2px solid grey;
-        padding-right: 10px;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
         overflow-x: hidden;
     }
 
@@ -3157,6 +3145,11 @@
     .custom-checkbox input:checked + .checkmark {
         background-color: #2196F3;
     }
+    .checkboxContainer1 > input[type="checkbox"] {
+        width: 30px;
+        height: 28px;
+    }
+
     .dragging {
         opacity: 0.7;
         border: 2px dashed #8CC4E7;
@@ -3205,9 +3198,9 @@
     }
 
     .horizontal1 {
-        display: block;
-        gap: 20px;
-        margin-left: 10px;
+        align-self: center;
+        display: grid;
+        gap: 5px;
     }
 
     .checkboxContainer > input[type="checkbox"] {
